@@ -1,7 +1,7 @@
 [theme]
 name=GNOME
 description=GNOME Theme
-engine=gtk
+engine=lightdm-gtk-greeter
 session=gnome
 gtkrc=gtkrc
 background-image=bg.jpg
