@@ -8,6 +8,7 @@ Overview of changes in lightdm 0.3.0
     * Replace D-Bus greeter communication with a private pipe
     * liblightdmgreeter now connect asynchronously
     * Use GDBus instead of dbus-glib
+    * Use the engine process name instead of a hardcoded value in theme files
 
 Overview of changes in lightdm 0.2.3
 
